src/snapshots/interpreter__parser__tests__known_macros@true_len1.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\arraycolsep5truept[not part]`"
---
stmts:
  - KnownMacro:
      name: arraycolsep
      args:
        - Token:
            Length:
              - "5"
              - truept
      is_alt: false
  - SquareBlock:
      - Text: not
      - Token: Space
      - Text: part
errors: []

