src/snapshots/interpreter__parser__tests__math_envs@simple_txt_alt.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\begin{equation*} as \\end{equation*}`"
---
stmts:
  - KnownEnv:
      name: equation
      args: []
      children:
        - Token: Space
        - Text: as
        - Token: Space
      is_alt: true
      kind: BlockMath
      start_end: ~
errors: []

