src/snapshots/interpreter__parser__tests__nested_blocks@math_unbalanced2.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `$[(])$`"
---
stmts:
  - Env:
      name: unnamed
      children:
        - SquareBlock:
            - Token: LParen
        - Token: RParen
      is_alt: false
      kind: InlineMath
      start_end:
        - Token: InlineMathLimiter
        - Token: InlineMathLimiter
errors: []

