src/snapshots/interpreter__parser__tests__nested_envs@1.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\begin{center} \\begin{center} \\begin{center} \\end{center} \\end{center} \\end{center}`"
---
stmts:
  - KnownEnv:
      name: center
      args: []
      children:
        - Token: Space
        - KnownEnv:
            name: center
            args: []
            children:
              - Token: Space
              - KnownEnv:
                  name: center
                  args: []
                  children:
                    - Token: Space
                  is_alt: false
                  kind: Regular
                  start_end: ~
              - Token: Space
            is_alt: false
            kind: Regular
            start_end: ~
        - Token: Space
      is_alt: false
      kind: Regular
      start_end: ~
errors: []

